firmware/defmt-test/macros/tests/ui/after_each-has-non-empty-signature.rs
fn main() {}

#[defmt_test_macros::tests]
mod tests {
    #[init]
    fn init() {
        // empty
    }

    #[after_each]
    fn test(arg: &mut u8) {
        assert!(true);
    }
}
